--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -25,6 +25,7 @@
                                 [mode]="viewMode ? modes.View : modes.Update"
                                 [tokenSubject]="addTokenSubject"
                                 [editorRefreshSubject]="editorRefreshSubject"
+                                [editEnabled]="!isShared"
                                 (cancel)="cancelEdit()"
                                 (changeMode)="setMode($event)"
                                 (save)="updateEntity($event)">
