enable copying body of a shared email template

--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -56,7 +56,7 @@
   </form>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancel.emit(true)">{{'EMAILTEMPLATE_INFO_CANCEL' | translate}}</div>
+    <div (click)="cancelUpdate()">{{'EMAILTEMPLATE_INFO_CANCEL' | translate}}</div>
     <div (click)="saveEmailTemplate(emailTemplateInput.form.valid)">{{'EMAILTEMPLATE_INFO_SAVE' | translate}}</div>
   </div>
 </div>
