--- a/src/app/pages/roles-page/role-view/role-view.component.html
+++ b/src/app/pages/roles-page/role-view/role-view.component.html
@@ -62,5 +62,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="1" [cardsExpression]="'100%'" [title]="'ROLE_INDEX_TITLE' | translate" [blue]="true" [images]="false"></spe-loader>
+  <spe-loader [numberOfTabs]="1" [cardsExpression]="'100%'" [title]="'ROLE_INDEX_TITLE' | translate" [blue]="true"></spe-loader>
 </ng-template>
