Finish currency input directive

--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -43,7 +43,7 @@
 
     <md-tab>
       <product-product-schedules [id]="entity.id"
-                                 [price]="entity.defaultPrice.amount + ''"
+                                 [defaultPrice]="entity.defaultPrice"
                                  (allEntities)="setCanNotBeDeleted($event)">
       </product-product-schedules>
     </md-tab>
