--- a/src/app/pages/customers-page/customer-view/customer-rebill-edit/customer-rebill-edit.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebill-edit/customer-rebill-edit.component.html
@@ -20,13 +20,13 @@
 
       <div class="customer-rebill-edit__data__date__title">{{'CUSTOMER_REBILLEDIT_PRICE' | translate}}</div>
       <md-input-container class="no-margin">
-        <input #priceInput md-input type="text" [textMask]="{mask: numberMask, guide: false}" [(ngModel)]="price">
+        <input #priceInput md-input type="text" currencyInput [initPrice]="rebill.amount" (priceChanged)="rebill.amount = $event">
       </md-input-container>
     </div>
   </div>
 
   <div class="customer-view__edit__actions">
-    <div (click)="cancel.emit(false)">{{'CUSTOMER_REBILLEDIT_CANCEL' | translate}}</div>
+    <div (click)="cancelRebillEdit()">{{'CUSTOMER_REBILLEDIT_CANCEL' | translate}}</div>
     <div (click)="saveRebill()">{{'CUSTOMER_REBILLEDIT_SAVE' | translate}}</div>
   </div>
 </div>
