Align table header pagination

--- a/src/app/pages/components/entities-table/entities-table.component.scss
+++ b/src/app/pages/components/entities-table/entities-table.component.scss
@@ -16,3 +16,11 @@ md-checkbox {
 .selected {
   background: #f2f2f2;
 }
+
+table-pagination {
+  width: 100%;
+}
+
+.entity-index__options {
+  flex-wrap: wrap;
+}
