--- a/src/app/pages/components/table-advanced/table-advanced-header/table-advanced-header.component.scss
+++ b/src/app/pages/components/table-advanced/table-advanced-header/table-advanced-header.component.scss
@@ -39,3 +39,7 @@ table-density {
 .entity-view__table-component__header__filter {
   margin-right: 6px;
 }
+
+table-pagination {
+  margin-left: 10px;
+}
