--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -256,7 +256,8 @@ $title-color: #8D8888;
   }
 
   &__preferences {
-    margin-left: 5px;
+    margin-left: 8px;
+    margin-right: 10px;
   }
 
   &__pagination {
