--- a/src/app/pages/components/entities-table/entities-table.component.html
+++ b/src/app/pages/components/entities-table/entities-table.component.html
@@ -19,9 +19,12 @@
   </div>
 
   <div class="entity-index__options">
+    <filter-input style="margin-left: auto" (valueChanged)="filterChanged.emit($event)"></filter-input>
+    <search-input (onSearch)="searchChanged.emit($event)"></search-input>
+    <table-density [density]="density" (densityChanged)="density = $event"></table-density>
+    <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
     <table-pagination
       class="entity-index__pagination--no-margin"
-      style="margin-left: auto"
       [limit]="limit"
       [paginationValues]="paginationValues"
       [previousDisabled]="previousDisabled"
@@ -30,10 +33,6 @@
       (next)="next.emit(true)"
       (updateLimit)="updateLimit.emit($event)">
     </table-pagination>
-    <filter-input class="entity-index__filter" (valueChanged)="filterChanged.emit($event)"></filter-input>
-    <search-input (onSearch)="searchChanged.emit($event)"></search-input>
-    <table-density [density]="density" (densityChanged)="density = $event"></table-density>
-    <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
   </div>
 
   <table class="entity-index__table highlight">
