Add dynamic pricing

--- a/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
+++ b/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
@@ -25,9 +25,23 @@
         <md-input-container [class.error]="formInvalid && !entity.sku" class="entity-view__card__content__item">
           <input required md-input [disabled]="mode === view" placeholder="{{'PRODUCT_INFO_SKU' | translate}}" name="sku" [(ngModel)]="entity.sku" type="text">
         </md-input-container>
+      </div>
 
+      <div style="margin-top: 15px;" class="product-view__group">
         <md-input-container class="entity-view__card__content__item">
           <input md-input currencyInput [initPrice]="entity.defaultPrice" (priceChanged)="priceUpdated($event)" [disabled]="mode === view" placeholder="{{'PRODUCT_INFO_DEFAULTPRICE' | translate}}" name="defaultPrice" (keydown)="isCurrency($event)" type="text">
+        </md-input-container>
+
+        <md-checkbox style="font-size: 14px;" [disabled]="mode === view" [checked]="entity.dynamicPrice.enabled" (change)="toggleDynamic()">{{'PRODUCT_INFO_DYNAMICPRICE' | translate}}</md-checkbox>
+      </div>
+
+      <div style="margin-top: 15px;" class="product-view__group">
+        <md-input-container [class.error]="formInvalid && dynamicInvalid()" class="entity-view__card__content__item">
+          <input md-input currencyInput [initPrice]="entity.dynamicPrice.min" (priceChanged)="entity.dynamicPrice.min = $event" [disabled]="mode === view || !entity.dynamicPrice.enabled" placeholder="{{'PRODUCT_INFO_MINPRICE' | translate}}" name="defaultPrice" (keydown)="isCurrency($event)" type="text">
+        </md-input-container>
+
+        <md-input-container [class.error]="formInvalid && dynamicInvalid()" class="entity-view__card__content__item">
+          <input md-input currencyInput [initPrice]="entity.dynamicPrice.max" (priceChanged)="entity.dynamicPrice.max = $event" [disabled]="mode === view || !entity.dynamicPrice.enabled" placeholder="{{'PRODUCT_INFO_MAXPRICE' | translate}}" name="defaultPrice" (keydown)="isCurrency($event)" type="text">
         </md-input-container>
       </div>
 
