--- a/src/app/pages/components/entities-table/entities-table.component.scss
+++ b/src/app/pages/components/entities-table/entities-table.component.scss
@@ -30,5 +30,17 @@ md-checkbox {
 
   th {
     box-sizing: border-box;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+
+    md-icon {
+      &:first-of-type {
+        top: 14px;
+      }
+
+      &:last-of-type {
+        top: 20px;
+      }
+    }
   }
 }
