--- a/src/app/pages/components/table-advanced/table-advanced-header/table-advanced-header.component.html
+++ b/src/app/pages/components/table-advanced/table-advanced-header/table-advanced-header.component.html
@@ -6,9 +6,9 @@
     <input md-input placeholder="{{ 'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filterString" (input)="filterChanged()" type="text">
   </md-input-container>
 
-  <table-density [density]="density" (densityChanged)="densitySelected.emit($event)" [small]="true"></table-density>
+  <table-density *ngIf="showDensity" [density]="density" (densityChanged)="densitySelected.emit($event)" [small]="true"></table-density>
 
-  <table-preferences [columnParams]="columnParams" [small]="true"></table-preferences>
+  <table-preferences *ngIf="showPreferences" [columnParams]="columnParams" [small]="true"></table-preferences>
 
   <table-pagination
     *ngIf="showPagination"
