--- a/src/app/pages/components/entity-view-entityacl/entity-view-entityacl.component.scss
+++ b/src/app/pages/components/entity-view-entityacl/entity-view-entityacl.component.scss
@@ -13,7 +13,7 @@
   height: 100%;
   min-height: calc(100vh - 72px);
   width: 100%;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.3);
   display: flex;
   z-index: 5;
 }
@@ -21,17 +21,16 @@
 .acl-modal {
   margin: 100px auto auto;
   background: white;
-  padding: 10px 20px;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 
   .title {
-    margin-bottom: 14px;
+    padding: 10px 20px 10px;
   }
 
   .subtitle {
+    padding: 10px 20px 20px;
     display: flex;
     font-size: 12px;
-    margin-bottom: 20px;
 
     div {
       cursor: pointer;
@@ -51,7 +50,7 @@
     cursor: pointer;
 
     &:first-of-type {
-      margin-left: 45px;
+      margin-left: 55px;
       margin-right: 10px;
     }
 
@@ -61,9 +60,11 @@
   }
 }
 
+.basic-container {
+  padding: 20px;
+}
+
 table-advanced {
-  margin: 0 -10px;
-  display: block;
   width: 900px;
   max-width: 100%;
 }
