--- a/src/app/pages/components/entity-view-entityacl/entity-view-entityacl.component.scss
+++ b/src/app/pages/components/entity-view-entityacl/entity-view-entityacl.component.scss
@@ -24,12 +24,14 @@
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 
   .title {
-    padding: 10px 20px 10px;
+    padding: 15px;
+    color: #5B9BE1;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.14)
   }
 
-  .subtitle {
-    padding: 10px 20px 20px;
+  .tabz {
     display: flex;
+    padding: 20px 15px 10px;
     font-size: 12px;
 
     div {
@@ -61,10 +63,12 @@
 }
 
 .basic-container {
-  padding: 20px;
+  padding: 15px 15px 25px;
 }
 
 table-advanced {
-  width: 900px;
+  padding: 15px 15px 25px;
+  display: inline-block;
+  width: 740px;
   max-width: 100%;
 }
